--- a/style.css
+++ b/style.css
@@ -87,13 +87,38 @@ body{
 }*/
 
 .footer {
-  background-color: rgb(238, 197, 197);
+  /*background-color: rgb(238, 197, 197);*/
+
+  /*background: rgb(131, 58, 180);
+  background: -moz-linear-gradient(139deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+  background: -webkit-linear-gradient(139deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+  background: linear-gradient(139deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#833ab4", endColorstr="#fcb045", GradientType=1);
+  */
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+
   padding: 20px;
   text-align: center;
   position: fixed;
   bottom: 0;
   width: 100%;
 }
+
+ @keyframes gradient {
+   0% {
+     background-position: 0% 50%;
+   }
+
+   50% {
+     background-position: 100% 50%;
+   }
+
+   100% {
+     background-position: 0% 50%;
+   }
+ }
 
 .footer-content {
   display: flex;
